slurm task array subconfig and support for empty variable lists in download script

--- a/configs/download_era5_wb2_1979-2022-6h-1444x721.yaml
+++ b/configs/download_era5_wb2_1979-2022-6h-1444x721.yaml
@@ -32,7 +32,7 @@ pressure_levels:
   - 850
   - 925
   - 1000
-resampling_frequencies:
+climatology_frequencies:
   - 1W
 climatology_years:
   - 1979
@@ -40,7 +40,4 @@ climatology_years:
 eval_years:
   - 2021
   - 2022
-compute_quantile: true
-quantile_variables:
-  - 2m_temperature
 verbose: true
