--- a/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
+++ b/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
@@ -27,13 +27,16 @@ interest_variables:
 interest_levels:
   - 250
   - 500
-batch_size: 6
+batch_size: 2
 era5_base_frequency: 6h
 init_frequency: 1d
 forecast_horizon: 6w
 eval_aggregation: null
 eval_start: 1w
 aurora_model: aurora-0.25-pretrained.ckpt
+rechunk: true
+drop_timestamps: true
+persist: false
 verbose: true
 
 output_dir: data/era5_wb2_forecasts/2021-2022-6h-1d-6w-1444x721_original_variables/
