--- a/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
+++ b/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
@@ -34,7 +34,7 @@ forecast_horizon: 6w
 eval_aggregation: null
 eval_start: 1w
 aurora_model: aurora-0.25-pretrained.ckpt
-rechunk: true
+rechunk: false
 drop_timestamps: true
 persist: false
 verbose: true
