--- a/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
+++ b/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
@@ -27,17 +27,18 @@ interest_variables:
 interest_levels:
   - 250
   - 500
-batch_size: 2
+batch_size: 8
 era5_base_frequency: 6h
-init_frequency: 1d
+init_frequency: 3.5d # 2 init per week 
 forecast_horizon: 6w
-eval_aggregation: null
+eval_aggregation: 1w
 eval_start: 1w
 aurora_model: aurora-0.25-pretrained.ckpt
 rechunk: false
 drop_timestamps: false
 persist: false
 verbose: true
+use_dataloader: false
 
 output_dir: data/era5_wb2_forecasts/2021-2022-6h-1d-6w-1440x721_original_variables/
 #                        ... {era6_freq}-{init_freq}-{forecast_horizon} ...
