--- a/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
+++ b/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
@@ -27,9 +27,9 @@ interest_variables:
 interest_levels:
   - 250
   - 500
-batch_size: 8
+batch_size: 1
 era5_base_frequency: 6h
-init_frequency: 3.5d # 2 init per week 
+init_frequency: 3.5d
 forecast_horizon: 6w
 eval_aggregation: 1w
 eval_start: 1w
