forecast debug ; eval debug

--- a/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
+++ b/configs/forecast_era5_wb2_2021-2022-6h-6w-1440x721_original_vars.yaml
@@ -29,7 +29,7 @@ interest_levels:
   - 500
 batch_size: 1
 era5_base_frequency: 6h
-init_frequency: 3.5d
+init_frequency: 1w
 forecast_horizon: 6w
 eval_aggregation: 1w
 eval_start: 1w
